# hive

./: .gitignore  Cargo.toml  HIVE_UI_IMPROVEMENT_PLAN.md  README.md
examples/: demo_events.json
src/: app.rs  demo.rs  main.rs
src/animation/: connection.rs  mod.rs  pulse.rs
src/event/: mod.rs  queue.rs  types.rs  watcher.rs
src/input/: handler.rs  mod.rs
src/positioning/: interpolation.rs  mod.rs  semantic.rs  spatial.rs
src/render/: activity_log.rs  agent.rs  agent_panel.rs  colors.rs  connections.rs  display_mode.rs  field.rs  heatmap.rs  layers.rs  mod.rs  symbols.rs  trails.rs  ui.rs
src/state/: agent.rs  field.rs  history.rs  mod.rs
