[package]
name = "hive"
version = "0.1.0"
edition = "2021"
description = "Real-time AI Agent Visualization - Watch agents work together like players on a field"
authors = ["Hive Contributors"]
license = "MIT"
readme = "README.md"
keywords = ["ai", "visualization", "terminal", "tui", "agents"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# File watching
notify = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Time handling
chrono = "0.4"

# Random for demo mode
rand = "0.8"

# Color manipulation
palette = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
